fixed resources and distributable