@@ -30,9 +30,9 @@ kotlin {
             //implementation("androidx.compose.material3:material3-adaptive-navigation-suite:1.3.0-beta05")
             implementation(compose.components.resources)
             implementation(compose.components.uiToolingPreview)
-            implementation(compose.desktop.currentOs)
             implementation(libs.androidx.lifecycle.viewmodel)
             implementation(libs.androidx.lifecycle.runtime.compose)
+            //implementation("androidx.compose.ui:ui:1.6.8")
             implementation("com.squareup.moshi:moshi:1.15.1")
             implementation("com.squareup.moshi:moshi-kotlin:1.15.1")
             implementation("io.github.jan-tennert.supabase:serializer-moshi:VERSION")
@@ -45,8 +45,8 @@ kotlin {
             implementation("io.ktor:ktor-client-core:2.3.4")
             implementation("io.ktor:ktor-client-json:2.3.4")
             implementation("io.ktor:ktor-client-serialization:2.3.4")
-            implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1")
-            implementation("androidx.compose.runtime:runtime-livedata:$1.6.8")
+//            implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1")
+//            implementation("androidx.compose.runtime:runtime-livedata:$1.6.8")
             implementation("ch.qos.logback:logback-classic:1.2.3")
             implementation("cafe.adriel.voyager:voyager-navigator:1.1.0-beta02")
             implementation("cafe.adriel.voyager:voyager-screenmodel:1.1.0-beta02")
@@ -62,20 +62,15 @@ kotlin {
     }
 }
 
-
-
 compose.desktop {
     application {
         mainClass = "uni_connect.MainKt"
-
         nativeDistributions {
+            modules("java.sql")
+            modules("jdk.crypto.ec")
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "Uni_Connect"
-            packageVersion = "1.0.0"
-            jvmArgs(
-                "--add-modules=java.sql",
-                "-Dorg.slf4j.simpleLogger.defaultLogLevel=debug"
-            )
+
 
         }
     }
